# fat-contract-workshop

./: Cargo.toml  lib.rs
