[package]
name = "auction_house"
version = "0.1.0"
authors = ["hashwarlock <hashwarlock@phala.network>"]
edition = "2018"
resolver = "2"

[dependencies]
ink_primitives = { version = "3.0.0-rc7", default-features = false }
ink_metadata = { version = "3.0.0-rc7", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc7", default-features = false }
ink_storage = { version = "3.0.0-rc7", default-features = false }
ink_lang = { version = "3.0.0-rc7", default-features = false }
ink_prelude = { version = "3.0.0-rc7", default-features = false }

scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }

[lib]
name = "auction_house"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
